--- a/index.html
+++ b/index.html
@@ -1,28 +1,139 @@
-document.getElementById('submit').addEventListener('click', async () => {
-    const message = document.getElementById('message').value.trim();
-    const name = document.getElementById('name').value.trim();
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>表白墙</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        h1 {
+            margin-top: 20px;
+        }
+        .form-container {
+            background-color: white;
+            border-radius: 10px;
+            padding: 20px;
+            width: 90%;
+            max-width: 600px;
+            margin: 30px auto;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        .message-container {
+            margin-top: 30px;
+        }
+        .message-box {
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 15px;
+            margin: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+        }
+        .message-box p {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
 
-    if (!message) {
-        alert('表白内容不能为空！');
-        return;
-    }
+    <h1>欢迎来到表白墙</h1>
 
-    try {
-        const response = await fetch('https://love.jeffreyy.workers.dev/submit-message', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ message, name })
+    <div class="form-container">
+        <h2>留下你的表白</h2>
+        <input type="text" id="name" placeholder="你的名字（可选）" />
+        <textarea id="message" placeholder="请输入你的表白内容..." rows="5"></textarea>
+        <button id="submit">提交表白</button>
+    </div>
+
+    <div class="message-container" id="messageContainer">
+        <h2>最新表白</h2>
+        <!-- 动态加载表白内容 -->
+    </div>
+
+    <script>
+        // 提交表白内容
+        document.getElementById('submit').addEventListener('click', async () => {
+            const message = document.getElementById('message').value.trim();
+            const name = document.getElementById('name').value.trim();
+
+            if (!message) {
+                alert('表白内容不能为空！');
+                return;
+            }
+
+            try {
+                // 调用 Cloudflare Worker API 提交表白
+                const response = await fetch('https://love.jeffreyy.workers.dev/submit-message', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ message, name })
+                });
+
+                if (response.ok) {
+                    alert('表白提交成功！');
+                    document.getElementById('message').value = '';  // 清空表白内容
+                    document.getElementById('name').value = '';     // 清空名字
+                    loadMessages(); // 更新显示表白内容
+                } else {
+                    alert('提交失败，请稍后再试！');
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                alert('发生错误，请稍后再试！');
+            }
         });
 
-        if (response.ok) {
-            alert('表白提交成功！');
-            document.getElementById('message').value = '';
-            document.getElementById('name').value = '';
-        } else {
-            alert('提交失败，请稍后再试！');
+        // 加载表白内容（可选：从 GitHub 获取并显示）
+        async function loadMessages() {
+            try {
+                const response = await fetch('https://api.github.com/repos/Jeffrey-done/lovewall/contents/messages');
+                const data = await response.json();
+
+                const messageContainer = document.getElementById('messageContainer');
+                messageContainer.innerHTML = '<h2>最新表白</h2>'; // 重置内容
+
+                data.forEach(file => {
+                    const messageBox = document.createElement('div');
+                    messageBox.classList.add('message-box');
+
+                    const messageContent = atob(file.content); // 解码 base64 内容
+                    messageBox.innerHTML = `<p><strong>表白内容:</strong> ${messageContent}</p>`;
+                    messageContainer.appendChild(messageBox);
+                });
+            } catch (error) {
+                console.error('Error loading messages:', error);
+                document.getElementById('messageContainer').innerHTML = '<p>无法加载表白内容。</p>';
+            }
         }
-    } catch (error) {
-        console.error('Error:', error);
-        alert('发生错误，请稍后再试！');
-    }
-});
+
+        // 页面加载时加载最新的表白内容
+        loadMessages();
+    </script>
+    
+</body>
+</html>
